change newrepo files

--- a/test2.html
+++ b/test2.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Git is a version control system.
-        Git is free software.</p>
-        <p>change index git page</p>
+    <p>this is test2 pages</p>
 </body>
 </html>
