--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>Git is a version control system.
         Git is free software.</p>
         <p>change index git page</p>
+        <p>change 2 count index git pages</p>
 </body>
 </html>
