change branch featurel

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
             comments
             git
         </div>
+        <p>Creating a new branch is quick AND simple.</p>
 </body>
 </html>
