--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <p>dyt</p>
         </div>
         <p>change index git page</p>
+        <div class="cst">
+            <p>add master text</p>
+        </div>
        
 </body>
 </html>
