--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
              </p>
              <p>ssss</p>
          </div>
-       
+        <div class="change">
+            <p>chagnes 2 status page</p>
+        </div>
 </body>
 </html>
